--- a/css/material.css
+++ b/css/material.css
@@ -13,7 +13,7 @@ label, button, input, textarea, blockquote, pre, code {font-family:inherit;}
 
 article, p, li {line-height:1.5;}
 
-h1, h2, h3, h4, h5, h6 {margin:0; font-weight:normal;}
+h1, h2, h3, h4, h5, h6 {font-weight:normal;}
 h1 {margin:36px 0 12px 0; font-size:42px;}
 h2 {margin:36px 0 12px 0;font-size:36px;}
 h3 {margin:24px 0 12px 0;font-size:28px;}
@@ -21,13 +21,12 @@ h4, h5, h6 {margin:24px 0 12px 0; font-size:16px;}
 
 a {color:#03A9F4; text-decoration:none;}
 a:hover {text-decoration:underline;}
-p {margin:0;}
 
 ol, ul {padding-left:32px;}
 
 hr {border:none; border-top:1px solid rgba(0,0,0,0.12);}
 
-fieldset {margin:0; padding:0; border:0;}
+fieldset {border:0;}
 
 table {border-spacing:0;}
 th, td {padding:6px 12px;}
