--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 <article id="post">
-<header class="header"><h1 class="title">{{ page.title }}</h1></header>
+<header class="header ft-white"><h1 class="title">{{ page.title }}</h1></header>
 <div class="card">{{ content }}</div>
 </article>
 
 <style>
 	.header {background:#2196F3; height:320px;}
-	.header .title {margin:0 auto; padding-top:75px; width:1080px; color:white;}
+	.header .title {margin:0 auto; padding-top:75px; width:1080px;}
 	#post .card {margin:-150px auto 32px; width:1080px; line-height:1.75;}
 	blockquote {margin:12px 24px; padding:16px;}
 	pre, code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 4px; font-size:0.9em;}
