--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,7 @@
 		<link rel="mask-icon" href="/image/favicons/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="shortcut icon" href="/image/favicons/favicon.ico">
 		<meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
-		<meta name="theme-color" content="#ffffff">
+		<meta name="theme-color" content="{{ page.theme.primary }}">
 		
 		<link rel="stylesheet" href="/css/default.css">
 		<link rel="stylesheet" href="/css/material.css">
