--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: "default"
 ---
 <article id="post">
 <header class="header ft-white"><h1 class="title">{{ page.title }}</h1></header>
