--- a/css/material.css
+++ b/css/material.css
@@ -61,6 +61,9 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .button {display:block; padding:6px; width:36px; height:36px;}
 .button svg {fill:white; width:24px; height:24px;}
 
+.left {float:left;}
+.right {float:right;}
+
 /* Components */
 .card {background:white; padding:16px; border-radius:2px; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
 
