--- a/css/material.css
+++ b/css/material.css
@@ -65,9 +65,9 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .right {float:right;}
 
 /* Components */
-.card {background:white; padding:16px; border-radius:2px; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
+.card {background:white; display:block; position:relative; padding:16px; border-radius:2px; transition:box-shadow 200ms; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
 
-.nav .top {position:fixed; top:0; left:0; padding:14px; width:100%; height:64px; transition:box-shadow linear 200ms;}
+.nav .top {position:fixed; top:0; left:0; padding:14px; width:100%; height:64px; transiion:box-shadow linear 200ms;}
 .tablet .nav .top.shadow, .mobile .nav .top.shadow {box-shadow:0 0 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);}
 .nav .top .title {margin-left:14px; line-height:36px; font-size:1.4em;}
 
