css: material: Rename class name ft-dark to ft-black

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="ft-dark">
+<html class="ft-black">
 	<head>
 		{% include html/head.html %}
 		<link rel="stylesheet" href="/css/default.css">
