js: Add window.resize.js

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="/fonts/roboto.css">
 
 		<script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
+		<script type="text/javascript" src="/js/window.resize.js"></script>
 		{% include verification.html %}
 
 		<style>
@@ -19,24 +20,5 @@
 	</head>
 	<body class="desktop flex">
 		{{ content }}
-		<script>
-			(function ($) {
-				$body = $('body'), $win = $(window);
-				function chkWindow() {
-					if (($win.width() >= 1024) && !$body.hasClass('desktop')) {
-						console.log('Change Window size to Desktop');
-						$body.addClass('desktop').removeClass('tablet mobile');
-						$side.hasClass('active') ? activeNav(false) : console.log("Already deactive");
-					} else if (($win.width() >= 768) && ($win.width() < 1024) && !$body.hasClass('tablet')) {
-						console.log('Change Window size to Tablet');
-						$body.addClass('tablet').removeClass('desktop mobile');
-					} else if (($win.width() < 768) && !$body.hasClass('mobile')) {
-						console.log('Change Window size to Mobile');
-						$body.addClass('mobile').removeClass('desktop tablet');
-					}
-				};
-				$win.resize(chkWindow), chkWindow();
-			})(jQuery);
-		</script>
 	</body>
 </html>
