--- a/css/material.css
+++ b/css/material.css
@@ -65,7 +65,15 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .right {float:right;}
 
 /* Components */
-.card {background:white; display:block; position:relative; padding:16px; border-radius:2px; transition:box-shadow 200ms; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
+.section {margin:16px 12px; width:calc(100% - 24px);}
+.desktop .section {margin:32px auto; width:688px;} /* article width: 640px */
+.desktop.wide .section {width:968px;} /* article width: 920px */
+
+.section .header .title {margin:0; line-height:2; font-size:1.4em;}
+.section .header .info {margin-bottom:16px;}
+
+.card {background:white; position:relative; border-radius:2px; width:100%; box-shadow: 0 1px 2px rgba(0,0,0,0.3);}
+.header ~ .card {margin:8px 0;}
 
 .nav .top {position:fixed; top:0; left:0; padding:14px; width:100%; height:64px; transiion:box-shadow linear 200ms;}
 .tablet .nav .top.shadow, .mobile .nav .top.shadow {box-shadow:0 0 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);}
