--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: "base"
 	<div class="close">
 		<a class="button" href="#">{% include icon/arrow-left.svg %}</a>
 	</div>
-	<div class="profile bg-p">
+	<div class="profile bg-s">
 		<p><img class="img" src="/image/profile.jpg"></p>
 		<p><a class="link ellipsis ft-white" href="/">OPNay</a></p>
 	</div>
@@ -26,7 +26,7 @@ layout: "base"
 </aside>
 <div class="wrap bg-gray flex-1">
 	<nav class="nav">
-		<div class="top flex animate bg-p">
+		<div class="top flex animate bg-p-d">
 			<div class="menu"><a class="button" href="#">{% include icon/menu.svg %}</a></div>
 			<div class="title flex-1 ft-white">{{ page.title }}</div>
 		</div>
