--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -12,4 +12,4 @@
 <link rel="mask-icon" href="/image/favicons/safari-pinned-tab.svg" color="#5bbad5">
 <link rel="shortcut icon" href="/image/favicons/favicon.ico">
 <meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
-<meta name="theme-color" content="{{ page.theme.primary }}">
+<meta name="theme-color" content="{{ page.theme.primary.dark }}">
