--- a/css/material.css
+++ b/css/material.css
@@ -73,7 +73,8 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .section .header .info {margin-bottom:16px;}
 
 .card {background:white; position:relative; border-radius:2px; width:100%; box-shadow: 0 1px 2px rgba(0,0,0,0.3);}
-.header ~ .card {margin:8px 0;}
+.header ~ .card {margin:8px 0;} /* outter header */
+.card header {padding:16px; font-size:18pt;} /* inner header */
 
 .nav .top {position:fixed; top:0; left:0; padding:14px; width:100%; height:64px; transiion:box-shadow linear 200ms;}
 .tablet .nav .top.shadow, .mobile .nav .top.shadow {box-shadow:0 0 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);}
