js: window: When desktop remove '.cover' and disactive '.side' - Always show '.side'

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="/fonts/roboto.css">
 
 		<script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="/js/window.resize.js"></script>
+		<script type="text/javascript" defer src="/js/window.resize.js"></script>
 		{% include verification.html %}
 
 		<style>
