--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="/fonts/materialicons.css">
 		<link rel="stylesheet" href="/fonts/roboto.css">
 
-		<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+		{% include html/jquery.html %}
 		<script type="text/javascript" defer src="/js/window.resize.js"></script>
 		{% include verification.html %}
 
