layouts: default: Add Icons8 Link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@ layout: "base"
 			<div class="title flex-1 ft-white">{{ page.title }}</div>
 		</div>
 	</nav>
-	<div class="content">{{ content }}</div>
+	<div class="content">{{ content }}
+	<footer style="text-align:center;">Icon License - <a href="https://icons8.com">Icons8</a></footer>
 	<script>
 		(function ($) {
 			/* Side Menu */
