layouts: base: window size class use in 'html' tag

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,7 +22,7 @@
 			.bg-s-d {background:{{ page.theme.secondary.dark }};}
 		</style>
 	</head>
-	<body class="desktop flex">
+	<body class="flex">
 		{{ content }}
 	</body>
 </html>
