layouts: base: Don't use flex in 'body' tag - Add wrap left margin when desktop - window use scroll instead '.content' element scroll - '.side' always fixed position

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,7 +22,7 @@
 			.bg-s-d {background:{{ page.theme.secondary.dark }};}
 		</style>
 	</head>
-	<body class="flex">
+	<body>
 		{{ content }}
 	</body>
 </html>
