--- a/css/default.css
+++ b/css/default.css
@@ -1,11 +1,9 @@
 @charset "utf-8";
 
 /* Side */
-.side {z-index:120; background:#FFF; position:fixed; top:0; bottom:0; overflow-x:hidden; overflow-y:auto; width:320px;}
-.desktop .side {box-shadow:0 0 16px rgba(0,0,0,0.3);}
-.tablet .side, .mobile .side {transform:translateX(-100%);}
+.side {z-index:120; background:#FFF; position:fixed; top:0; bottom:0; overflow-x:hidden; overflow-y:auto; width:320px; transform:translateX(-100%);}
+.side.active, .desktop .side {box-shadow:0 0 16px rgba(0,0,0,0.3); transform:translateX(0);}
 .mobile .side {width:100%;}
-.tablet .side.active, .mobile .side.active {box-shadow:0 0 16px rgba(0,0,0,0.3); transform:translateX(0);}
 
 .side .close {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px;}
 .desktop .side .close {display:none;}
