fonts: 'Noto Sans', Roboto use google webfont

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,9 +5,8 @@
 		<link rel="stylesheet" href="/css/default.css">
 		<link rel="stylesheet" href="/css/material.css">
 
-		<link rel="stylesheet" href="/fonts/notosanskr.css">
-		<link rel="stylesheet" href="/fonts/materialicons.css">
-		<link rel="stylesheet" href="/fonts/roboto.css">
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
 
 		{% include html/jquery.html %}
 		<script type="text/javascript" defer src="/js/window.resize.js"></script>
