--- a/css/material.css
+++ b/css/material.css
@@ -4,7 +4,7 @@
 /* Tags */
 html {
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-	font-family:Roboto,RobotoDraft,arial,'Noto Sans KR','Nanum Gothic',sans-serif;
+	font-family:Roboto,'Noto Sans','Noto Sans KR',Arial,'Nanum Gothic',sans-serif;
 	font-size:100%;
 }
 html, body {width:100%; height:100%;}
