--- a/css/material.css
+++ b/css/material.css
@@ -83,6 +83,6 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .desktop .nav .top {width:calc(100% - 320px);}
 .desktop .nav .menu {display:none;}
 
-.content {padding-top:64px;}
+.content {padding-top:64px; padding-bottom:32px;}
 
 .cover {z-index:110; background:rgba(0,0,0,0.1); position:fixed; width:100%; height:100%;}
