--- a/css/default.css
+++ b/css/default.css
@@ -21,5 +21,5 @@
 .side .list .title {line-height:24px; font-size:18px;}
 .side .list .icon {margin-right:12px; width:24px; height:24px; vertical-align:middle;}
 
-.wrap {min-height:100%;}
+.wrap {min-height:100%; transition:margin ease-out .2s}
 .desktop .side ~ .wrap {margin-left:320px;}
