Convert font-size to rem

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,5 @@ layout: "default"
 	.header .title {margin:0 auto; padding-top:75px; width:1080px;}
 	#post .card {margin:-150px auto 32px; width:1080px; line-height:1.75;}
 	blockquote {margin:12px 24px; padding:16px;}
-	pre, code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 4px; font-size:0.9em;}
+	pre, code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 4px; font-size:0.9rem;}
 </style>
