--- a/css/material.css
+++ b/css/material.css
@@ -5,7 +5,7 @@
 html {
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
 	font-family:Roboto,'Noto Sans','Noto Sans KR',Arial,'Nanum Gothic',sans-serif;
-	font-size:100%;
+	font-size:16pt;
 }
 html, body {width:100%; height:100%;}
 label, button, input, textarea, blockquote, pre, code {font-family:inherit;}
@@ -13,10 +13,10 @@ label, button, input, textarea, blockquote, pre, code {font-family:inherit;}
 article, p, li {line-height:1.5;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:normal;}
-h1 {margin:36px 0 12px 0; font-size:42px;}
-h2 {margin:36px 0 12px 0;font-size:36px;}
-h3 {margin:24px 0 12px 0;font-size:28px;}
-h4, h5, h6 {margin:24px 0 12px 0; font-size:16px;}
+h1 {margin:36px 0 12px 0; font-size:1.6rem;}
+h2 {margin:36px 0 12px 0;font-size:1.4rem;}
+h3 {margin:24px 0 12px 0;font-size:1.2rem;}
+h4, h5, h6 {margin:24px 0 12px 0; font-size:1rem;}
 
 a, .accent {color:#03A9F4; text-decoration:none;}
 a:hover {text-decoration:underline;}
@@ -32,8 +32,8 @@ th, td {padding:6px 12px;}
 th {background:#EEE;}
 
 blockquote {background:rgba(0,0,0,0.1); margin:12px 24px; padding:16px;}
-code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 6px; font-size:0.9em;}
-pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
+code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 6px; font-size:0.9rem;}
+pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9rem;}
 
 /*
  * Class
@@ -69,17 +69,17 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .desktop .section {margin:32px auto; width:688px;} /* article width: 640px */
 .desktop.wide .section {width:968px;} /* article width: 920px */
 
-.section .header .title {margin:0; line-height:2; font-size:18pt;}
+.section .header .title {margin:0; line-height:2; font-size:1.1rem;}
 .section .header .info {margin-bottom:16px;}
 
 .card {background:white; position:relative; border-radius:2px; width:100%; box-shadow:0 1px 2px rgba(0,0,0,0.3);}
 .header ~ .card {margin:8px 0;} /* outter header */
-.card header {border-radius:2px 2px 0 0; padding:16px; font-size:18pt;} /* inner header */
+.card header {border-radius:2px 2px 0 0; padding:16px; font-size:1.1rem;} /* inner header */
 
 .nav .top {z-index:100; position:fixed; top:0; padding:14px; width:100%; height:64px; transition:all 200ms;}
 .nav .top.shadow {box-shadow:0 0 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);}
 .nav .top .menu {margin-right:14px;}
-.nav .top .title {line-height:36px; font-size:18pt;}
+.nav .top .title {line-height:36px; font-size:1.1rem;}
 .desktop .nav .top {width:calc(100% - 320px);}
 .desktop .nav .menu {display:none;}
 
