css: material: Some layout size convert to rem

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@ layout: "base"
 		</div>
 	</nav>
 	<div class="content">{{ content }}
-	<footer style="text-align:center;">Icon License - <a href="https://icons8.com">Icons8</a></footer>
+	<footer class="footer">Icon License - <a href="https://icons8.com">Icons8</a></footer>
 	<script>
 		(function ($) {
 			/* Side Menu */
