--- a/css/material.css
+++ b/css/material.css
@@ -65,7 +65,7 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9rem;}
 .right {float:right;}
 
 /* Components */
-.section {margin:16px 12px; width:calc(100% - 24px);}
+.section {margin:1.2rem auto; width:calc(100% - 1.2rem);}
 .desktop .section {margin:32px auto; width:688px;} /* article width: 640px */
 .desktop.wide .section {width:968px;} /* article width: 920px */
 
@@ -83,6 +83,8 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9rem;}
 .desktop .nav .top {width:calc(100% - 320px);}
 .desktop .nav .menu {display:none;}
 
-.content {padding-top:64px; padding-bottom:32px;}
+.content {padding:64px 0 1.2rem;}
 
 .cover {z-index:110; background:rgba(0,0,0,0.1); position:fixed; width:100%; height:100%;}
+
+.footer {text-align:center; font-size:0.9rem;}
