--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,12 +2,30 @@
 layout: "base"
 ---
 <div class="wrap">{{ content }}</div>
+<div class="loader-bg"><div class="loader-wrap"><div class="loader"></div></div></div>
 <style>
 body {background-size:cover; background-repeat:no-repeat;}
 body:before {content:''; background:rgba(0,0,0,0.5); position:fixed; display:block; top:0; left:0; width:100%; height:100%;}
+
+.loader-bg {position:fixed; width:100%; height:100%; background:{{ page.theme.primary.main }}; top:0; left:0;}
+.loader-wrap {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
+.loader{border: 2rem solid #f3f3f3; border-radius: 50%; width:2rem; height:2rem; animation:spin .5s linear infinite;}
+.loader-bg.done {animation:spin-done .8s linear forwards;}
+
+@keyframes spin {
+    0% {transform:scale(0); opacity:1;}
+    100% {transform:scale(1); opacity:0;}
+}
+
+@keyframes spin-done {
+    0% {opacity:1;}
+    99% {opacity:0; transform: scale(1);}
+    100% {opacity:0; transform:scale(0);}
+}
 </style>
 <script>
     (function ($) {
-        $('body').css('background-image', 'url("/image/unsplash/' + ($.now() % {{ page.image_number }} + 1) + '.jpg")');
+        $('body').css('background-image', 'url("{{ site.url }}/image/unsplash/' + ($.now() % {{ page.image_number }} + 1) + '.jpg")');
+        $('html').ready(function () {$('.loader-bg').addClass('done');});
     })(jQuery);
 </script>
