layouts: main: Use window.onload instead ready function - window.onload is mean 'this page is finished download and loading' - $.ready is mean 'downloaded contents at this time are fisnished loading'

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -26,6 +26,6 @@ body:before {content:''; background:rgba(0,0,0,0.5); position:fixed; display:blo
 <script>
     (function ($) {
         $('body').css('background-image', 'url("{{ site.url }}/image/unsplash/' + ($.now() % {{ page.image_number }} + 1) + '.jpg")');
-        $('html').ready(function () {$('.loader-bg').addClass('done');});
+        window.onload = function () {$('.loader-bg').addClass('done');};
     })(jQuery);
 </script>
