js: Add window.loading.js

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,5 +20,6 @@
 	</head>
 	<body>
 		{{ content }}
+        <script type="text/javascript" src="/js/window.loading.js"></script>
 	</body>
 </html>
