layouts: base: move window.resize in bottom of body

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,6 @@
 		<link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
 
 		{% include html/jquery.html %}
-		<script type="text/javascript" defer src="/js/window.resize.js"></script>
 		{% include verification.html %}
 
 		<style>
@@ -21,5 +20,6 @@
 	<body>
 		{{ content }}
         <script type="text/javascript" src="/js/window.loading.js"></script>
+		<script type="text/javascript" src="/js/window.resize.js"></script>
 	</body>
 </html>
