--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /* Loading */
-.loader-bg {position:fixed; width:100%; height:100%; background:#2196F3; top:0; left:0;}
+.loader-bg {z-index:200; position:fixed; width:100%; height:100%; background:#2196F3; top:0; left:0;}
 .loader-wrap {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
 .loader{border: 2rem solid #f3f3f3; border-radius: 50%; width:2rem; height:2rem; animation:spin .5s linear infinite;}
 .loader-bg.done {animation:spin-done .8s linear forwards;}
