Add canonical link

--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 <title>{{ page.title }}</title>
 
 <!-- favicon -->
