Use Segoe UI Font and remove Noto font

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,8 +5,7 @@
 		<link rel="stylesheet" href="/css/default.css">
 		<link rel="stylesheet" href="/css/material.css">
 
-		<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 		{% include html/jquery.html %}
 		{% include verification.html %}
