--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -5,12 +5,11 @@
 <title>{{ page.title }}</title>
 
 <!-- favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/image/favicons/apple-touch-icon.png">
+<link rel="shortcut icon" href="/image/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/image/favicons/180.png">
 <link rel="icon" type="image/png" href="/image/favicons/192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="/image/favicons/32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/image/favicons/16.png" sizes="16x16">
 <link rel="manifest" href="/image/favicons/manifest.json">
-<link rel="mask-icon" href="/image/favicons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/image/favicons/favicon.ico">
 <meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
-<meta name="theme-color" content="{{ page.theme.primary.dark }}">
+<meta name="theme-color" content="#60CCEE">
