--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@ layout: "base"
 ---
 <div class="wrap">{{ content }}</div>
 <style>
-body {background-size:cover; background-repeat:no-repeat;}
+body {background-size:cover; background-repeat:no-repeat; background-attachment:fixed;}
 body:before {content:''; background:rgba(127,127,127,0.24); position:fixed; display:block; top:0; left:0; width:100%; height:100%;}
 </style>
 <script>
