layout: Move Theme color set to default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,4 +25,9 @@ layout: "base"
 			});
 		})(jQuery);
 	</script>
+	<style>
+		.bg-p {background:{{ page.theme.primary.main }};}
+		.bg-p-l {background:{{ page.theme.primary.light }};}
+		.bg-p-d {background:{{ page.theme.primary.dark }};}
+	</style>
 </div>
