_config: theme is renamed to md_theme and move to defaults

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,9 +11,9 @@
 		{% include verification.html %}
 
 		<style>
-			.bg-p {background:{{ page.theme.primary.main }};}
-			.bg-p-l {background:{{ page.theme.primary.light }};}
-			.bg-p-d {background:{{ page.theme.primary.dark }};}
+			.bg-p {background:{{ page.md_theme.main }};}
+			.bg-p-l {background:{{ page.md_theme.light }};}
+			.bg-p-d {background:{{ page.md_theme.dark }};}
 		</style>
 	</head>
 	<body>
