--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -28,45 +28,11 @@ layout: "main"
         </header>
         <article class="article">{{ content }}</article>
 
-        {% if page.ads %}
-        <div id="post_adsense">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Github Pages -->
-            <ins class="adsbygoogle"
-                    style="display:block"
-                    data-ad-client="ca-pub-2339446308971759"
-                    data-ad-slot="5727311856"
-                    data-ad-format="auto"
-                    data-full-width-responsive="true"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
-        {% endif %}
+        <!-- Google Adsense -->
+        {% if page.ads %}{% include services/adsense.html %}{% endif %}
 
-        {% if page.comments %}
-        <hr>
-        <div id="disqus_thread"></div>
-        <script>
-        
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-        /*
-        var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        */
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://opnay.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>        
-        {% endif %}
+        <!-- Disqus -->
+        {% if page.comments %}<hr>{% include services/disqus.html %}{% endif %}
     </div>
 </div>
 <style>
@@ -90,7 +56,7 @@ body::before {display:none !important;}
 .content .post-header .info {font-size:0.8rem;}
 .content .article {padding:8px 24px 16px; font-size:0.8rem;}
 
-#post_adsense {text-align:center;}
+#page_adsense {text-align:center;}
 #disqus_thread {padding:16px 24px;}
 
 /* Mobile */
