--- a/css/material.css
+++ b/css/material.css
@@ -63,6 +63,7 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9rem;}
 
 .left {float:left;}
 .right {float:right;}
+.center {text-align:center;}
 
 /* Components */
 .section {margin:1.2rem auto; width:calc(100% - 1.2rem);}
