_layouts: Add Google Tag Manager

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="ft-black">
 	<head>
+		{% include services/tagmanager.html %}
 		{% include html/head.html %}
 		<link rel="stylesheet" href="/css/default.css">
 		<link rel="stylesheet" href="/css/material.css">
