--- a/css/material.css
+++ b/css/material.css
@@ -10,7 +10,7 @@ html {
 html, body {width:100%; height:100%;}
 label, button, input, textarea, blockquote, pre, code {font-family:inherit;}
 
-article, p, li {line-height:1.5;}
+article, p, li {line-height:1.75;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:normal;}
 h1 {margin:36px 0 12px 0; font-size:1.6rem;}
@@ -31,9 +31,9 @@ table {border-spacing:0;}
 th, td {padding:6px 12px;}
 th {background:#EEE;}
 
-blockquote {background:rgba(0,0,0,0.1); margin:12px 24px; padding:16px;}
-code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 6px; font-size:0.9rem;}
-pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9rem;}
+blockquote {background:#f0f2f6; margin:12px 24px; padding:16px;}
+:not(pre) > code {background:#f0f2f6; margin:0 2px; padding:2px 6px; font-size:0.9em;}
+pre {background:#f0f2f6; margin:12px 0; padding:16px; font-size:0.9em;}
 
 /*
  * Class
