--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,7 +18,7 @@
 		</style>
 	</head>
 	<body>
-        <script type="text/javascript" src="/js/window.loading.js"></script>
+		{% include loading.html %}
 		<script type="text/javascript" src="/js/window.resize.js"></script>
 		{{ content }}
 	</body>
