_includes: Move _layouts/main to _includes/img_back - Add Option img_background for image background - Set default img_background to true - Convert layout:"main" to "base"

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,6 +19,7 @@
 	<body>
 		{% include loading.html %}
 		<script type="text/javascript" src="/js/window.resize.js"></script>
+		{% if page.img_background %}{% include img_back.html %}{% endif %}
 		{{ content }}
 	</body>
 </html>
