--- a/css/material.css
+++ b/css/material.css
@@ -57,15 +57,10 @@ pre {background:#f0f2f6; margin:12px 0; padding:16px; font-size:0.9em;}
 .flex.center {align-items:center; justify-content:center;}
 .flex.vertical {flex-direction:column;}
 .flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
-.animate {transition:transform ease-out .2s;}
-.button {display:block; padding:6px; width:36px; height:36px;}
-.button svg {fill:white; width:24px; height:24px;}
 
 .left {float:left;}
 .right {float:right;}
 .center {text-align:center;}
 
 /* Components */
-.card {background:white; position:relative; border-radius:8px; width:100%; box-shadow:0 1px 2px rgba(0,0,0,0.3);}
-.header ~ .card {margin:8px 0;} /* outter header */
-.card header {border-radius:2px 2px 0 0; padding:16px; font-size:1.1rem;} /* inner header */
+.card {background:white; position:relative; border-radius:8px; width:100%; box-shadow:0 1px 2px rgba(0,0,0,0.3); overflow:hidden;}
