--- a/css/material.css
+++ b/css/material.css
@@ -27,8 +27,9 @@ hr {border:none; border-top:1px solid rgba(0,0,0,0.12);}
 
 fieldset {border:0;}
 
-table {border-spacing:0;}
+table {margin:16px auto; border-spacing:0;}
 th, td {padding:6px 12px;}
+td {border-bottom:1px solid #DDD; font-size:0.9em;}
 th {background:#EEE;}
 
 blockquote {background:#f0f2f6; margin:12px 24px; padding:16px;}
