--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,5 +1,6 @@
 ---
 layout: "base"
+img_background: false
 ---
 <div class="pg-header">
     <nav class="nav">
@@ -37,7 +38,6 @@ layout: "base"
     </div>
 </div>
 <style>
-body::before {display:none !important;}
 .pg-header {padding:64px 32px;}
 .nav {background:rgba(0,0,0,0.5); padding:32px; border-radius:8px; width:100%; color:white; font-size:1.4rem;}
 
