_includes/html: jquery.html combine with head.html

--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -13,3 +13,5 @@
 <link rel="manifest" href="/image/favicons/manifest.json">
 <meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
 <meta name="theme-color" content="#60CCEE">
+
+<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
