--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -14,4 +14,4 @@
 <meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
 <meta name="theme-color" content="#60CCEE">
 
-<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" async src="/js/jquery-3.2.1.min.js"></script>
