--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,5 +1,5 @@
 <!-- Loading -->
-<script type="text/javascript" src="/js/window.loading.js"></script>
+<script type="text/javascript" defer src="/js/window.loading.js"></script>
 <style>
 .loader-bg {z-index:200; position:fixed; width:100%; height:100%; top:0; left:0;}
 .loader-wrap {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
