--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		{% include loading.html %}
-		<script type="text/javascript" src="/js/window.resize.js"></script>
+		<script type="text/javascript" defer src="/js/window.resize.js"></script>
 		{% if page.img_background %}{% include img_back.html %}{% endif %}
 		{{ content }}
 	</body>
