--- a/_includes/services/gist.html
+++ b/_includes/services/gist.html
@@ -1,1 +1,1 @@
-<script defer src="https://gist.github.com/opnay/{{ include.src }}.js"></script>
+<script src="https://gist.github.com/opnay/{{ include.src }}.js"></script>
