--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,5 +1,5 @@
 <!-- Loading -->
-<script type="text/javascript" defer src="/js/window.loading.js"></script>
+<script>(function ($) { 'use strict'; var cdiv = function (cname) {return $('<div>',{'class':cname});}; $('body').append(cdiv('loader-bg bg-p').append(cdiv('loader-wrap').append(cdiv('loader')))); })(jQuery);</script>
 <style>
 .loader-bg {z-index:200; position:fixed; width:100%; height:100%; top:0; left:0;}
 .loader-wrap {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
