--- a/_includes/img_back.html
+++ b/_includes/img_back.html
@@ -1,9 +1,7 @@
+<!-- Image Background -->
+<script>(function ($) {$('body').css('background-image', 'url("/image/unsplash/' + ($.now() % {{ page.image_number }} + 1) + '.jpg")');})(jQuery);</script>
 <style>
 body {background-size:cover; background-repeat:no-repeat; background-attachment:fixed;}
 body:before {content:''; background:rgba(127,127,127,0.24); position:fixed; display:block; top:0; left:0; width:100%; height:100%;}
 </style>
-<script>
-(function ($) {
-    $('body').css('background-image', 'url("/image/unsplash/' + ($.now() % {{ page.image_number }} + 1) + '.jpg")');
-})(jQuery);
-</script>
+<!-- End Image Background-->
