--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -5,16 +5,7 @@
 .loader-wrap {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
 .loader{border: 2rem solid #f3f3f3; border-radius: 50%; width:2rem; height:2rem; animation:spin .5s linear infinite;}
 .loader-bg.done {animation:spin-done .8s linear forwards;}
-
-@keyframes spin {
-    0% {transform:scale(0); opacity:1;}
-    100% {transform:scale(1); opacity:0;}
-}
-
-@keyframes spin-done {
-    0% {opacity:1;}
-    99% {opacity:0; transform: scale(1);}
-    100% {opacity:0; transform:scale(0);}
-}
+@keyframes spin { 0% {transform:scale(0); opacity:1;} 100% {transform:scale(1); opacity:0;}}
+@keyframes spin-done { 0% {opacity:1;} 99% {opacity:0; transform: scale(1);} 100% {opacity:0; transform:scale(0);} }
 </style>
 <!-- End Loading -->
