--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
 	<head>
 		{% include services/tagmanager.html %}
 		{% include html/head.html %}
-		<link rel="stylesheet" href="/css/material.css">
+		<link rel="stylesheet" href="/css/default.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<style>
 			.bg-p {background:{{ page.md_theme.main }};}
