--- a/css/default.css
+++ b/css/default.css
@@ -67,3 +67,4 @@ article img {max-width:100%;}
 
 /* Components */
 .card {background:white; position:relative; border-radius:8px; width:100%; box-shadow:0 1px 2px rgba(0,0,0,0.3); overflow:hidden;}
+.card.center {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
