_layouts/blog: Resize title font
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -39,7 +39,7 @@ layout: "base"
 <style>
 body::before {content:none;}
 .pg-header {padding:64px 32px;}
-.nav {background:rgba(0,0,0,0.5); padding:32px; border-radius:8px; width:100%; color:white; font-size:1.4rem;}
+.nav {background:rgba(0,0,0,0.5); padding:32px; border-radius:8px; width:100%; color:white; font-size:32px;}
 
 .nav .owner {display:inline-block;}
 .nav .profile {border-radius:50%; width:64px; height:64px; vertical-align:middle;}
@@ -53,7 +53,7 @@ body::before {content:none;}
 
 .content {background:#F1F3F4; padding:32px; min-height:calc(100% - 256px);}
 .content .post-header {padding:16px 24px;}
-.content .post-header .title {font-size:1.4rem;}
+.content .post-header .title {font-size:24px;}
 .content .post-header .info {font-size:0.8rem;}
 .content .article {padding:8px 24px 16px; font-size:0.8rem;}
 
