_layouts/blog: Resize article font size
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -55,7 +55,7 @@ body::before {content:none;}
 .content .post-header {padding:16px 24px;}
 .content .post-header .title {font-size:24px;}
 .content .post-header .info {font-size:0.8rem;}
-.content .article {padding:8px 24px 16px; font-size:0.8rem;}
+.content .article {padding:8px 24px 16px;}
 
 #page_adsense {padding:16px 24px; text-align:center;}
 #disqus_thread {padding:16px 24px; }
