--- a/css/default.css
+++ b/css/default.css
@@ -6,6 +6,7 @@ html {
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
 	font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size:16px;
+	letter-spacing:0.05em;
 }
 html, body {width:100%; height:100%;}
 label, button, input, textarea, blockquote, pre, code {font-family:inherit;}
