_layouts/blog: Fix vertical align '.nav .pg-menu'
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -44,8 +44,8 @@ body::before {content:none;}
 .nav .owner {display:inline-block;}
 .nav .profile {border-radius:50%; width:64px; height:64px; vertical-align:middle;}
 .nav .title {display:inline-block; margin:0 16px; vertical-align:middle;}
-.nav .pg-menu {display:inline-block; padding:14px 0; text-align:right;}
-.nav .pg-menu a {display:inline-block; margin:0 4px; width:36px; height:36px; text-align:center; cursor:pointer;}
+.nav .pg-menu {padding:14px 0; max-height:64px; line-height:0; text-align:right;}
+.nav .pg-menu a {display:inline-block; margin:0 4px; padding:6px; width:36px; height:36px; text-align:center; cursor:pointer;}
 .nav .pg-menu img {width:24px; height:24px; vertical-align:middle;}
 
 .v_hr {display:inline-block; margin:0 8px; border-right:1px solid white; height:36px; vertical-align:top;}
