--- a/_layouts/lists.html
+++ b/_layouts/lists.html
@@ -4,7 +4,7 @@ layout: "base"
 <section class="card center">
     <div class="toolbar">
         <div class="back left">
-            <a href="{{ page.back }}"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
+            <a class="sk-btn" href="{{ page.back }}"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
         </div>
         <div class="title left">{{ page.title }}</div>
     </div>
@@ -22,10 +22,11 @@ layout: "base"
     .mobile .card {max-width:calc(100% - 32px);}
     .toolbar::after {content:''; display:block; clear:both;}
     .toolbar .back {padding:14px; width:64px; height:64px;}
-    .toolbar .back a {display:block; padding:6px; width:36px; height:36px;}
+    .toolbar .back .sk-btn {display:block; border-radius:50%; padding:6px; width:36px; height:36px; overflow:hidden;}
+    .toolbar .back .sk-btn:hover {background:rgba(0,0,0,0.1); transition:background 0.3s ease-out}
     .toolbar .title {width:calc(100% - 64px); font-size:24px; line-height:64px;}
     .list .item {display:block; padding:16px;}
-    .list .item:hover {background:rgba(127,127,127,0.12); text-decoration:none;}
+    .list .item:hover {background:rgba(0,0,0,0.1); text-decoration:none;}
     .list .title {margin:0 0 8px; font-size:18px;}
     .list .desc {font-size:12px; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
 </style>
