--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,16 +1,15 @@
 ---
 layout: "lists"
-title: "Posts"
-back: "/"
 ---
-{% assign psize = site.posts | size %}
+{% assign cur = page.title %}
+{% assign psize = site.categories[cur] | size %}
 {% if psize == 0 %}
 <script>
     (function($){ $(".card").addClass("empty").find(".toolbar .title").text("There's no Posts"); })(jQuery)
 </script>
 {% else %}
 <section class="list">
-    {% for post in site.posts %}
+    {% for post in site.categories[cur] %}
     <a class="item ft-black" href="{{ post.url }}">
         <h1 class="title">{{ post.title }}</h1>
         <p class="desc ft-black-sec">{{ post.content | strip_html | xml_escape }}</p>
