--- a/css/default.css
+++ b/css/default.css
@@ -9,22 +9,28 @@ html {
 	letter-spacing:0.01em;
 }
 html, body {width:100%; height:100%;}
-label, button, input, textarea, blockquote, pre, code {font-family:inherit;}
+label, blockquote, pre, code {font-family:inherit;}
+button, input, select, textarea {font-family:inherit; font-size:inherit; line-height:inherit;}
 
-article, p, li {line-height:1.75;}
+p {margin-bottom:8px;}
+article > p {line-height:1.5;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:normal;}
-h1 {margin:36px 0 12px 0; font-size:1.6rem;}
-h2 {margin:36px 0 12px 0;font-size:1.4rem;}
-h3 {margin:24px 0 12px 0;font-size:1.2rem;}
-h4, h5, h6 {margin:24px 0 12px 0; font-size:1rem;}
+h1, h2, h3 {margin:18px 0 16px;}
+h4, h5, h6 {margin:16px 0;}
+h1 {font-size:36px;}
+h2 {font-size:24px;}
+h3 {font-size:18px;}
+h4 {font-size:16px;}
+h5 {font-size:14px;}
+h6 {font-size:12px;}
 
 a, .accent {color:#03A9F4; text-decoration:none;}
 a:hover {text-decoration:underline;}
 
-ol, ul {padding-left:32px;}
+ol, ul {margin:16px 0; padding-left:32px;}
 
-hr {border:none; border-top:1px solid rgba(0,0,0,0.12);}
+hr {margin:16px 0; border:none; border-top:1px solid rgba(0,0,0,0.12);}
 
 fieldset {border:0;}
 
