_layouts/lists: Fix desc margin
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/lists.html
+++ b/_layouts/lists.html
@@ -28,5 +28,5 @@ layout: "base"
     .list .item {display:block; padding:16px;}
     .list .item:hover {background:rgba(0,0,0,0.1); text-decoration:none;}
     .list .title {margin:0 0 8px; font-size:18px;}
-    .list .desc {font-size:12px; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
+    .list .desc {margin:0; font-size:14px; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
 </style>
