--- a/css/default.css
+++ b/css/default.css
@@ -37,12 +37,11 @@ hr {margin:16px 0; border:none; border-top:1px solid rgba(0,0,0,0.12);}
 fieldset {border:0;}
 
 table {margin:16px auto; border-spacing:0;}
-th, td {padding:6px 12px;}
-td {font-size:0.9em;}
+th, td {padding:4px 12px; line-height:1.5; font-size:0.9em;}
 th {background:#EEE;}
 
 blockquote {background:#f0f2f6; margin:12px 24px; padding:16px;}
-:not(pre) > code {background:#f0f2f6; margin:0 2px; padding:2px 6px; font-size:0.9em;}
+:not(pre) > code, kbd {background:#f0f2f6; margin:0 2px; padding:2px 6px; font-size:0.9em;}
 pre {background:#f0f2f6; margin:12px 0; padding:16px; font-size:0.9em;}
 
 article img {max-width:100%;}
