--- a/_layouts/lists.html
+++ b/_layouts/lists.html
@@ -6,7 +6,7 @@ layout: "base"
         <div class="back left">
             <a class="sk-btn" href="{{ page.back }}"><img width="24px" height="24px" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+DQogICAgPHBhdGggZD0iTTAgMGgyNHYyNEgweiIgZmlsbD0ibm9uZSIvPg0KICAgIDxwYXRoIGQ9Ik0yMCAxMUg3LjgzbDUuNTktNS41OUwxMiA0bC04IDggOCA4IDEuNDEtMS40MUw3LjgzIDEzSDIwdi0yeiIvPg0KPC9zdmc+"></a>
         </div>
-        <div class="title left">{{ page.title }}</div>
+        <div class="title">{{ page.title }}</div>
     </div>
     {{ content }}
 </section>
@@ -24,7 +24,7 @@ layout: "base"
     .toolbar .back {padding:14px; width:64px; height:64px;}
     .toolbar .back .sk-btn {display:block; border-radius:50%; padding:6px; width:36px; height:36px; overflow:hidden;}
     .toolbar .back .sk-btn:hover {background:rgba(0,0,0,0.1); transition:background 0.3s ease-out}
-    .toolbar .title {width:calc(100% - 64px); font-size:24px; line-height:64px;}
+    .toolbar .title {padding:0 64px; font-size:24px; line-height:64px; text-align:center;}
     .list .item {display:block; padding:16px;}
     .list .item:hover {background:rgba(0,0,0,0.1); text-decoration:none;}
     .list .title {margin:0 0 8px; font-size:18px;}
