--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,12 +27,13 @@
 		<meta property="twitter:card" content="summary">
 		<meta property="twitter:site" content="{{ site.twitter }}">
 		<meta property="twitter:creator" content="{{ site.twitter }}">
-		<meta property="twitter:title" content="{{ page.title }}">
 		<meta property="twitter:url" content="{{ site.url }}{{ page.url }}">
 		<meta property="twitter:image:src" content="{{ site.url }}{% if page.image %}{{ page.image }}{% else %}/image/profile.png{% endif %}">
 		{% if page.layout == "blog" %}
+		<meta property="twitter:title" content="{{ page.title }}">
 		<meta property="twitter:description" content="{{ page.content | markdownify | strip_html | truncatewords: 50 }}">
 		{% else %}
+		<meta property="twitter:title" content="{{ site.title }}">
 		<meta property="twitter:description" content="{{ page.title }}">
 		{% endif %}
 
